# nsfw_text

./: Makefile  NSFWText.py  README.md  app.py  app_inference_spec.py  benchmark.py  example_inference.json  pyproject.toml  test.py
test/: test_validator.py
tests/: test_validator.py
validator/: __init__.py  main.py  post-install.py
